# rust-web-template

./: Cargo.toml  Makefile  README.md  deny.toml  server.yml
.github/workflows/: build.yml
fixtures/: decoding.pem  encoding.pem
src/: config.rs  error.rs  lib.rs  main.rs
src/dto/: user.rs
src/handlers/: mod.rs
src/utils/: jwt.rs
