[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing", "multipart"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono" # 支持从数据库datetime反序列化到chrono类型
] }
thiserror = "2.0.9"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "rt", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = [
    "serde" # 支持chrono序列化和反序列化json
] }
tower-http = { version = "0.6.2", features = ["compression-full", "fs", "cors", "trace"] }

http-body-util = { version = "0.1.1", optional = true }
sqlx-db-tester = { version = "0.5.0", optional = true }
jwt-simple = { version = "0.12.9", default-features = false, features = ["pure-rust"] }

[features]
default = []
test-util = [
    "http-body-util",
    "sqlx-db-tester"
]
